Updated 04. How to deploy your Windows Containers based apps into Azure Service Fabric (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric.md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric.md
@@ -23,8 +23,8 @@ Yo can find additional generic info on Kubernetes deployment into ACS in this po
 https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-service-kubernetes-windows-walkthrough
 
 1. Create an Azure Resource Group to hold everything related to the Kubernetes cluster and delete everything in a single step whenever you need to.
-* Create a dedicated Resource group (of course, you can choose your own name for the Resource Group): 
-  az group create --name eShopK8sWinResGrp --location westus
+   * Create a dedicated Resource group (of course, you can choose your own name for the Resource Group): 
+   `az group create --name eShopK8sWinResGrp --location westus`
 
 2. Create the Kubernetes cluster (you should use your own cluster name, user name and password):
 `az acs create --orchestrator-type=kubernetes --resource-group eShopK8sWinResGrp --name=eShopK8sWinCluster --agent-count=2 --generate-ssh-keys --windows --admin-username youruser --admin-password your@password`
