Updated 04. How to deploy your Windows Containers based apps into Azure Service Fabric (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric.md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric.md
@@ -29,8 +29,7 @@ However, the Master node will be a Linux node.
 Yo can find additional generic info on Kubernetes deployment into ACS in this post:
 https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-service-kubernetes-windows-walkthrough
 
-1. Create an Azure Resource Group to hold everything related to the Kubernetes cluster and delete everything in a single step whenever you need to.
-   * Create a dedicated Resource group (of course, you can choose your own name for the Resource Group): 
+1. Create an Azure Resource Group to hold everything related to the Kubernetes cluster and delete everything in a single step whenever you need to. Of course, you can choose your own name for the Resource Group: 
 
    `az group create --name eShopK8sWinResGrp --location westus`
 
@@ -38,7 +37,7 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    `az acs create --orchestrator-type=kubernetes --resource-group eShopK8sWinResGrp --name=eShopK8sWinCluster --agent-count=2 --generate-ssh-keys --windows --admin-username youruser --admin-password your@password`
 
-If re-using already an created ssh key pair, you can add something like the following:
+   If re-using already an created ssh key pair, you can add something like the following:
 
    `--ssh-key-value ~/acs/sshkeys/acscesar.pub \`
 
