Updated 04. How to deploy your Windows Containers based apps into Azure Service Fabric (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric.md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric.md
@@ -29,11 +29,11 @@ However, the Master node will be a Linux node.
 Yo can find additional generic info on Kubernetes deployment into ACS in this post:
 https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-service-kubernetes-windows-walkthrough
 
-1. Create an Azure Resource Group to hold everything related to the Kubernetes cluster and delete everything in a single step whenever you need to. Of course, you can choose your own name for the Resource Group: 
+1. **Create an Azure Resource Group** to hold everything related to the Kubernetes cluster and delete everything in a single step whenever you need to. Of course, you can choose your own name for the Resource Group: 
 
    `az group create --name eShopK8sWinResGrp --location westus`
 
-2. Create the Kubernetes cluster (you should use your own cluster name, user name and password):
+2. **Create the Kubernetes cluster** (you should use your own cluster name, user name and password):
 
    `az acs create --orchestrator-type=kubernetes --resource-group eShopK8sWinResGrp --name=eShopK8sWinCluster --agent-count=2 --generate-ssh-keys --windows --admin-username youruser --admin-password your@password`
 
@@ -41,18 +41,18 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    `--ssh-key-value ~/acs/sshkeys/acscesar.pub \`
 
-3. Install kubectl if you don't have it installed in your PC
-To connect to the Kubernetes cluster from your client computer, use kubectl, the Kubernetes command-line client.
+3. **Install kubectl** if you don't have it installed in your PC
+   To connect to the Kubernetes cluster from your client computer, use kubectl, the Kubernetes command-line client.
 
-If you're using Azure CloudShell, kubectl is already installed. 
+   If you're using Azure CloudShell, kubectl is already installed. 
 
-If you want to install it locally, you can use the az acs kubernetes install-cli command.
-The following Azure CLI example installs kubectl to your system. 
-On Windows, run this command as an administrator:
+   If you want to install it locally, you can use the az acs kubernetes install-cli command.
+   The following Azure CLI example installs kubectl to your system. 
+   On Windows, run this command as an administrator:
 
    `az acs kubernetes install-cli`
 
-4. Connect to the Kubernetes cluster and set the ssh key files to your local PC
+4. **Connect to the Kubernetes cluster** and set the ssh key files to your local PC
 
    `az acs kubernetes get-credentials --resource-group=eShopK8sWinResGrp --name=eShopK8sWinCluster`
 
@@ -60,7 +60,7 @@ Again, if re-using an already created ssh key pair, you can add something like t
 
    `--ssh-key-value ~/acs/sshkeys/acscesar.pub \`
 
-5. Check the connection to the cluster by retrieving nodes list: 
+5. **Check the connection with kubectl** connecting to the cluster by retrieving nodes list: 
 
    `kubectl get nodes`
 
