Updated 03. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -1,6 +1,7 @@
 # Deploying eShopModernizedMVC to Kubernetes
 1. Topic:
-   * Sub-topic
+   - Sub-topic
+      * Sub-Sub-topic
 
 This post describes how to deploy eShopModernizedMVC to Kubernetes but deploying the eShopModernizedWebForms should be pretty similar, so you can use almost the same procedure but using different deployment .yml files.
  
