Updated 03. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -64,4 +64,5 @@ Again, if re-using an already created ssh key pair, you can add something like t
 5. **Check the connection with kubectl** connecting to the cluster by retrieving nodes list: 
 
    `kubectl get nodes`
+   ![kubectl-get-nodes](https://user-images.githubusercontent.com/1712635/30344662-1301075c-97b7-11e7-93c4-aa7f8c7cc251.png)
    
