--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -9,6 +9,11 @@ Deploying to Kubernetes from scratch a 2-step process:
 - Deploy a K8s cluster
 - Deploy the application and related resources
 
+## Position PowerShell into the eShopModernizedMVC-K8s\ServiceDeployments folder
+Clone the Repo code into your hard drive.
+Open a PowerShell with Admin privileges and run:
+   `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\ServiceDeployments`
+
 ## Connect to Azure from PowerShell
 1. Login to Azure with:
 
