--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -12,7 +12,7 @@ Deploying to Kubernetes from scratch a 2-step process:
 ## Position PowerShell into the eShopModernizedMVC-K8s\ServiceDeployments folder
 Clone the Repo code into your hard drive.
 Open a PowerShell with Admin privileges and run:
-   `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\ServiceDeployments`
+   `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**`
 
 ## Connect to Azure from PowerShell
 1. Login to Azure with:
@@ -70,4 +70,22 @@ Again, if re-using an already created ssh key pair, you can add something like t
 
    `kubectl get nodes`
    ![kubectl-get-nodes](https://user-images.githubusercontent.com/1712635/30344662-1301075c-97b7-11e7-93c4-aa7f8c7cc251.png)
+
+6. Open the Kubernetes Dashboard to check what’s going on in the cluster using a browser.
+    - Open another PowerShell and run this command:
+
+    `kubectl proxy`
+
+    - Now, open a browser and type the following to Connect to Kubernetes Dashboard:
+
+    `http://localhost:8001/ui`
+     
+     ![image](https://user-images.githubusercontent.com/1712635/30345114-d232ae04-97b8-11e7-9b33-fe7345ef6975.png)
+     Leave it open so that you can check there, changes applied later.
    
+## Deploying the eShopModernizedMVC app into the Kubernetes Cluster
+1. In case you are positioned in a different place, make sure you move, in PowerShell, to your deployment file path:
+   `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**`
+
+2. Run 
+kubectl create -f eshop-modernized-mvc-k8s-services-deployment.yml
