Updated 03. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -75,7 +75,7 @@ Again, if re-using an already created ssh key pair, you can add something like t
     - Open another PowerShell and run this command:
 
     `kubectl proxy`
-
+    ![image](https://user-images.githubusercontent.com/1712635/30345183-088e05e8-97b9-11e7-85f6-9087108e61d2.png)
     - Now, open a browser and type the following to Connect to Kubernetes Dashboard:
 
     `http://localhost:8001/ui`
