--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -88,87 +88,11 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**`
 
-3. Use or create a similar deployment file [eshop-modernized-mvc-k8s-services-deployment.yml](https://github.com/dotnet-architecture/eShopModernizing/blob/master/Kubernetes/eShopModernizedMVC-K8s/ServiceDeployments/eshop-modernized-mvc-k8s-services-deployment.yml) than the one with the following content:
+3. Use or create a similar deployment file than this: [eshop-modernized-mvc-k8s-services-deployment.yml](https://github.com/dotnet-architecture/eShopModernizing/blob/master/Kubernetes/eShopModernizedMVC-K8s/ServiceDeployments/eshop-modernized-mvc-k8s-services-deployment.yml)
 
-`
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: sql-data
-spec:
-  template:
-    metadata:
-      labels:
-        app: eshop-modernized-mvc
-        component: sql-data
-    spec:
-      containers:
-      - name: sql-data
-        image: microsoft/mssql-server-windows-developer
-        env:
-        - name: ACCEPT_EULA
-          value: "Y"
-        - name: SA_PASSWORD
-          value: Pass@word
-      nodeSelector:
-       beta.kubernetes.io/os: windows
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: eshop-modernized-mvc
-    component: sql-data
-  name: sql-data
-spec:
-  ports:
-  - port: 1433
-  selector:
-    app: eshop-modernized-mvc
-    component: sql-data
----
-apiVersion: apps/v1beta1
-kind: Deployment
-metadata:
-  name: eshop-modernized-mvc
-spec:
-  replicas: 1
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
-  minReadySeconds: 5 
-  template:
-    metadata:
-      labels:
-        app: eshop-modernized-mvc
-    spec:
-      containers:
-      - name: eshop-modernized-mvc
-        image: eshop/modernizedmvc
-        ports:
-        - containerPort: 80
-        env:
-        - name: UseMockData
-          value: "False"
-        - name: UseCustomizationData
-          value: "False"
-        - name: ConnectionString
-          value: "Server=sql.data;Initial Catalog=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=Pass@word;"
-      nodeSelector:
-       beta.kubernetes.io/os: windows
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: eshop-modernized-mvc
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-  selector:
-    app: eshop-modernized-mvc
-`
+2. Run in PowerShell within the path C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**
+ 
+`kubectl create -f eshop-modernized-mvc-k8s-services-deployment.yml`
 
-2. Run 
-kubectl create -f eshop-modernized-mvc-k8s-services-deployment.yml
+![image](https://user-images.githubusercontent.com/1712635/30345811-6cf101f0-97bb-11e7-8e12-f97d9e3870c5.png)
+
