Updated 03. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -88,11 +88,35 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**`
 
-3. Use or create a similar deployment file than this: [eshop-modernized-mvc-k8s-services-deployment.yml](https://github.com/dotnet-architecture/eShopModernizing/blob/master/Kubernetes/eShopModernizedMVC-K8s/ServiceDeployments/eshop-modernized-mvc-k8s-services-deployment.yml)
+2. Use or create a similar deployment file than this: [eshop-modernized-mvc-k8s-services-deployment.yml](https://github.com/dotnet-architecture/eShopModernizing/blob/master/Kubernetes/eShopModernizedMVC-K8s/ServiceDeployments/eshop-modernized-mvc-k8s-services-deployment.yml)
 
-2. Run in PowerShell within the path C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**
+3. Run in PowerShell within the path C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**
  
 `kubectl create -f eshop-modernized-mvc-k8s-services-deployment.yml`
 
 ![image](https://user-images.githubusercontent.com/1712635/30345811-6cf101f0-97bb-11e7-8e12-f97d9e3870c5.png)
 
+4. Check it out from Kubectl CLI:
+
+    `kubectl get pods`
+    ![image](https://user-images.githubusercontent.com/1712635/30345958-02a94b62-97bc-11e7-8bba-c1da60856594.png)
+
+    `kubectl get svc`
+    ![image](https://user-images.githubusercontent.com/1712635/30345982-160b1e4c-97bc-11e7-8471-a86935dbc91d.png)
+
+    You'll need to wait until you have an IP assigned. Check again until you see the IP with:
+
+    `kubectl get svc`
+    ![image](https://user-images.githubusercontent.com/1712635/30346010-27ef0ac4-97bc-11e7-90d2-d402c3b4dbe1.png)
+
+5. Run eShopModernizedMVC from Kubernetes!
+    **IMPORTANT**: The first time you might need to wait a few minutes until the SQL Server Docker image is pulled.
+    So, finally, you can test the app by typing the IPO you get like in the following case:
+
+    `http://104.42.224.204/`
+
+    ![image](https://user-images.githubusercontent.com/1712635/30346103-8433e4ee-97bc-11e7-83f2-3345b383c9cf.png)
+
+## Scale-out the eShopModernizedMVC container/deployment to multiple containers
+
+1. TBD
