--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -116,4 +116,20 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
 ## Scale-out the eShopModernizedMVC container/deployment to multiple containers
 
-1. TBD
+1. To scale-out the eShopModernizedMVC container/deployment run the following command with Kubectl:
+
+    `kubectl scale --replicas=5 deployments/eshop-modernized-mvc`
+    ![image](https://user-images.githubusercontent.com/1712635/30346438-935badd4-97bd-11e7-866d-667877dfe30f.png)
+
+2. To see in the CLI the number of replicas per deployment, run:
+
+    `kubectl get deployments`
+    ![image](https://user-images.githubusercontent.com/1712635/30346477-ae668b76-97bd-11e7-95f1-459eda578ba1.png)
+
+3. You can also scale-out the eShopModernizedMVC container/deployment from the Kubernetes Web UI:
+     ![image](https://user-images.githubusercontent.com/1712635/30346486-bba0075e-97bd-11e7-9d77-84175cd23673.png)
+
+5. To see in the Kubernetes Web UI the number of replicas per deployment:
+    ![image](https://user-images.githubusercontent.com/1712635/30346506-cb351db2-97bd-11e7-90f6-9c8196c93acc.png)
+
+
