Updated 03. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -133,6 +133,12 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
     ![image](https://user-images.githubusercontent.com/1712635/30346506-cb351db2-97bd-11e7-90f6-9c8196c93acc.png)
 
 
+You can delete everything from Azure with a simple Azure CLI 2 command: 
+
+`az group delete --name eShopK8sWinResGrp --yes --no-wait`
+
+Or using the Azure portal, of course.
+
 For further documentation on Kubernetes and Azure Container Service (ACS) check the following:
 https://docs.microsoft.com/en-us/azure/container-service/kubernetes/
 
