Updated 03. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -11,8 +11,14 @@ Clone the Repo code into your hard drive.
 Open a PowerShell with Admin privileges and run:
    `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**`
 
-## Connect to Azure from PowerShell
-1. Login to Azure with:
+## Connect to Azure from Azure CLI (PowerShell or Bash)
+1. Run **Azure CLI**: In order to run the Azure CLI locally, (you need Azure CLI version 2.0.4 or later) you need to install it if you don't have it. Follow this procedure: [Install Azure CLI 2.0](https://docs.microsoft.com/en-us/cli/azure/install-azure-cli)
+    
+    Then, check the version:
+
+    `az --version` 
+
+1. **Login to Azure** with:
 
    `az login`
 
