Updated 03. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -6,6 +6,11 @@ Deploying to Kubernetes from scratch a 2-step process:
 - Deploy a K8s cluster
 - Deploy the application and related resources
 
+## Prerequisites
+- Azure Subscription
+- Azure CLI installed on dev machine (explained below)
+- Access to eShopModernizedMVC image at Docker Hub (or any other Docker Registry)
+
 ## Position PowerShell into the eShopModernizedMVC-K8s\ServiceDeployments folder
 Clone the Repo code into your hard drive.
 Open a PowerShell with Admin privileges and run:
