Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -1,1 +1,7 @@
-TBD
+
+
+
+You can see the eShopLegacyMVC original legacy applications loaded in Visual Studio 2017.
+![image](https://user-images.githubusercontent.com/1712635/30353284-d86d8afc-97d9-11e7-8cd5-276dbca82ce3.png)
+
+Note that this application is a single monolithic application based on a single ASP.NET MVC project. In a similar way, the eShopLegacyWebForms applications is also a monolithic and single project based app. The only point in common for both applications is the catalog database, which is also the same database for the catalog microservice in eShopOnContainers. But these current monolithic scenarios we are covering here have nothing to do with microservices architecture but just with containers.
