--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -1,7 +1,23 @@
 
+** Overview
+In this walkthrough, you can simply explore the initial implementation of two sample legacy applications, with monolithic architecture, created with classic ASP.NET, one based on ASP.NET 4.x MVC and the second based on ASP.NET 4.x Web Forms, which are placed at the eShopModernizing GitHub repository. 
+In a similar way you could be containerizing a classic WCF service (Windows Communication Foundation) that could be consumed by a desktop application, as in this other example (eShopModernizingWCFWinForms).
 
+** Goals for this walkthrough
+Just to get familiar with these apps and its code and configuration, as you can configure the app so it generates and uses mock-data without using the SQL Database, if you want, for testing purposes. This optional config is based on Dependency Injection, in a decoupled way.
+
+** Scenario
+The diagram below explains the simple scenario of the original legacy applications.
+![image](https://user-images.githubusercontent.com/1712635/30354184-db7f1098-97df-11e7-8e7b-c18c67b8ba2a.png)
 
 You can see the eShopLegacyMVC original legacy applications loaded in Visual Studio 2017.
 ![image](https://user-images.githubusercontent.com/1712635/30353284-d86d8afc-97d9-11e7-8cd5-276dbca82ce3.png)
 
 Note that this application is a single monolithic application based on a single ASP.NET MVC project. In a similar way, the eShopLegacyWebForms applications is also a monolithic and single project based app. The only point in common for both applications is the catalog database, which is also the same database for the catalog microservice in eShopOnContainers. But these current monolithic scenarios we are covering here have nothing to do with microservices architecture but just with containers.
+
+From a business domain perspective, both apps offer the same catalog management features, and would be used by members of the eShop enterprise team to view and edit the product catalog. You can see initial screenshots below.
+![image](https://user-images.githubusercontent.com/1712635/30354210-0638f3b2-97e0-11e7-82c5-df18197ccdbd.png)
+ 
+These are web applications used to browse and modify the catalog entries. The fact that both apps deliver the same business/functional features is simply because of comparison reasons so you can see a similar modernization process for apps created with the ASP.NET MVC and ASP.NET Web Forms frameworks.
+The dependency taken on ASP.NET 4.x or older (either for Web Forms or MVC) means these applications will not run on .NET Core unless the code is fully re-written and instead uses ASP.NET Core MVC. But this is precisely the point, in this case you don’t want to re-architect or re-write any code but just containerized these existing applications while still using the same .NET technologies and the same code. You will see how you can run applications like these in containers without changes.
+
