Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -1,12 +1,12 @@
 
-** Overview
+##  Overview
 In this walkthrough, you can simply explore the initial implementation of two sample legacy applications, with monolithic architecture, created with classic ASP.NET, one based on ASP.NET 4.x MVC and the second based on ASP.NET 4.x Web Forms, which are placed at the eShopModernizing GitHub repository. 
 In a similar way you could be containerizing a classic WCF service (Windows Communication Foundation) that could be consumed by a desktop application, as in this other example (eShopModernizingWCFWinForms).
 
-** Goals for this walkthrough
+##  Goals for this walkthrough
 Just to get familiar with these apps and its code and configuration, as you can configure the app so it generates and uses mock-data without using the SQL Database, if you want, for testing purposes. This optional config is based on Dependency Injection, in a decoupled way.
 
-** Scenario
+##  Scenario
 The diagram below explains the simple scenario of the original legacy applications.
 ![image](https://user-images.githubusercontent.com/1712635/30354184-db7f1098-97df-11e7-8e7b-c18c67b8ba2a.png)
 
