Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -1,3 +1,12 @@
+##  Overview
+In this walkthrough, TBD
+
+##  Goals for this walkthrough
+TBD
+
+##  Scenario
+TBD
+
 ## How to: dockerize the app
 1. Add Docker files to the project:
    * In Visual Studio right click on the project -> Add-> Docker support
