Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service.md
@@ -7,6 +7,12 @@ Deploying to Kubernetes from scratch a 2-step process:
 - Deploy a K8s cluster
 - Deploy the application and related resources
 
+##  Goals for this walkthrough
+TBD
+
+##  Scenario
+TBD
+
 ## Prerequisites
 - Azure Subscription
 - Azure CLI installed on dev machine (explained below)
