Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric.md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric.md
@@ -1,6 +1,14 @@
-# Deploying eShopModernizedMVC to Azure Service Fabric
+##  Overview
+In this walkthrough, TBD
 
+##  Goals for this walkthrough
 TBD
+
+##  Scenario
+TBD
+
+## Prerequisites
+- TBD
 
 
 
