Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -13,7 +13,7 @@ The diagram below explains the simple scenario of the original legacy applicatio
 You can see the eShopLegacyMVC original legacy applications loaded in Visual Studio 2017.
 ![image](https://user-images.githubusercontent.com/1712635/30353284-d86d8afc-97d9-11e7-8cd5-276dbca82ce3.png)
 
-Note that this application is a single monolithic application based on a single ASP.NET MVC project. In a similar way, the eShopLegacyWebForms applications is also a monolithic and single project based app. The only point in common for both applications is the catalog database, which is also the same database for the catalog microservice in eShopOnContainers. But these current monolithic scenarios we are covering here have nothing to do with microservices architecture but just with containers.
+Note that this application is a single monolithic application based on a single ASP.NET MVC project. In a similar way, the eShopLegacyWebForms applications is also a monolithic and single project based app. The only point in common for both applications is the catalog database, which is also the same database for the catalog microservice in [eShopOnContainers](https://github.com/dotnet-architecture/eShopOnContainers). But these current monolithic scenarios we are covering here have nothing to do with microservices architecture but just with containers.
 
 From a business domain perspective, both apps offer the same catalog management features, and would be used by members of the eShop enterprise team to view and edit the product catalog. You can see initial screenshots below.
 ![image](https://user-images.githubusercontent.com/1712635/30354210-0638f3b2-97e0-11e7-82c5-df18197ccdbd.png)
