Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -21,3 +21,19 @@ From a business domain perspective, both apps offer the same catalog management 
 These are web applications used to browse and modify the catalog entries. The fact that both apps deliver the same business/functional features is simply because of comparison reasons so you can see a similar modernization process for apps created with the ASP.NET MVC and ASP.NET Web Forms frameworks.
 The dependency taken on ASP.NET 4.x or older (either for Web Forms or MVC) means these applications will not run on .NET Core unless the code is fully re-written and instead uses ASP.NET Core MVC. But this is precisely the point, in this case you don’t want to re-architect or re-write any code but just containerized these existing applications while still using the same .NET technologies and the same code. You will see how you can run applications like these in containers without changes.
 
+## Running and testing the sample applications
+These monolithic web applications are designed as monolithic web application containing all the code, including the data access libraries. The database would run on a separate high-available environment, like a SQL Server cluster.
+
+For development environments you have several choices in these applications and the SQL Server database:
+1.	Run the database as a SQL localdb database running on the same Windows (Or Windows Container afterwards)
+2.	Run the database as a separate SQL Server Windows Container
+3.	Mock the database with mock data based on in-memory lists and objects (UseMockData=true) 
+The third mode, access to a database is simulated in the sample code by using in-memory objects. However, this is an scenario just for testing the application in the case you want to isolate the application tests from the real database access or even for demo purposes. Therefore, you can run the applications against that fake data or access a real SQL Database. 
+
+For production environments, we encourage you to deploy the databases to one of the following choices:
+1.	Azure SQL Database
+2.	Azure SQL Database Managed Instance
+3.	SQL Server VM in Azure
+
+In any case, this series of walkthrough will demonstrate the simplest migration path, where you move existing assets to run in a container without any code changes at all. This path is appropriate for applications that are monolithic or standalone.
+
