Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -21,7 +21,7 @@ From a business domain perspective, both apps offer the same catalog management 
 These are web applications used to browse and modify the catalog entries. The fact that both apps deliver the same business/functional features is simply because of comparison reasons so you can see a similar modernization process for apps created with the ASP.NET MVC and ASP.NET Web Forms frameworks.
 The dependency taken on ASP.NET 4.x or older (either for Web Forms or MVC) means these applications will not run on .NET Core unless the code is fully re-written and instead uses ASP.NET Core MVC. But this is precisely the point, in this case you don’t want to re-architect or re-write any code but just containerized these existing applications while still using the same .NET technologies and the same code. You will see how you can run applications like these in containers without changes.
 
-## Running and testing the sample applications
+## Database options
 These monolithic web applications are designed as monolithic web application containing all the code, including the data access libraries. The database would run on a separate high-available environment, like a SQL Server cluster.
 
 For development environments you have several choices in these applications and the SQL Server database:
@@ -36,4 +36,9 @@ For production environments, we encourage you to deploy the databases to one of 
 3.	SQL Server VM in Azure
 
 In any case, this series of walkthrough will demonstrate the simplest migration path, where you move existing assets to run in a container without any code changes at all. This path is appropriate for applications that are monolithic or standalone.
+
+## Running and testing the sample applications
+Before you go ahead and containerized the apps, you can run and test the apps right away in Visual Studio by just opening the solutions and hitting F5. 
+The data will get populated either from a SQL Server localdb or from objects in-memory if the configuration is set to "UseMockData = True".
+![image](https://user-images.githubusercontent.com/1712635/30354850-1905b882-97e4-11e7-9620-ce0f25e5eb5f.png)
 
