Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -40,5 +40,10 @@ In any case, this series of walkthrough will demonstrate the simplest migration 
 ## Running and testing the sample applications
 Before you go ahead and containerized the apps, you can run and test the apps right away in Visual Studio by just opening the solutions and hitting F5. 
 The data will get populated either from a SQL Server localdb or from objects in-memory if the configuration is set to "UseMockData = True".
+
+Note that when running the app in standalone mode in Windows (like now from Visual Studio) you configure that setting from the web.config file. However, when running the app in a Windows Container (in future steps) you will configure that "UseMockData = True/False" in the environment variables especified at the docker-compose.override.yml or comparable metadata files from Kubernetes or Service Fabric.
+
 ![image](https://user-images.githubusercontent.com/1712635/30354850-1905b882-97e4-11e7-9620-ce0f25e5eb5f.png)
+
+
 
