--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -22,7 +22,7 @@ These are web applications used to browse and modify the catalog entries. The fa
 The dependency taken on ASP.NET 4.x or older (either for Web Forms or MVC) means these applications will not run on .NET Core unless the code is fully re-written and instead uses ASP.NET Core MVC. But this is precisely the point, in this case you don’t want to re-architect or re-write any code but just containerized these existing applications while still using the same .NET technologies and the same code. You will see how you can run applications like these in containers without changes.
 
 ## Database options
-These monolithic web applications are designed as monolithic web application containing all the code, including the data access libraries. The database would run on a separate high-available environment, like a SQL Server cluster.
+These monolithic web applications are designed as web application containing all the code, including the data access libraries. The database would run on a separate high-available environment, like a SQL Server cluster.
 
 For development environments you have several choices in these applications and the SQL Server database:
 1.	Run the database as a SQL localdb database running on the same Windows (Or Windows Container afterwards)
@@ -31,19 +31,90 @@ For development environments you have several choices in these applications and 
 The third mode, access to a database is simulated in the sample code by using in-memory objects. However, this is an scenario just for testing the application in the case you want to isolate the application tests from the real database access or even for demo purposes. Therefore, you can run the applications against that fake data or access a real SQL Database. 
 
 For production environments, we encourage you to deploy the databases to one of the following choices:
-1.	Azure SQL Database
+1.	Azure SQL Database (Recommended for eShopModernizing as it is a simple SQL DB)
 2.	Azure SQL Database Managed Instance
 3.	SQL Server VM in Azure
 
 In any case, this series of walkthrough will demonstrate the simplest migration path, where you move existing assets to run in a container without any code changes at all. This path is appropriate for applications that are monolithic or standalone.
 
 ## Running and testing the sample applications
-Before you go ahead and containerized the apps, you can run and test the apps right away in Visual Studio by just opening the solutions and hitting F5. 
+Before you go ahead and containerized the apps in the next walkthroughs, and in regards running the web applications in the development environment, you can simply load the solution, select the “Set as Startup Project” application project to the app you want to run, and run the application with F5 as a standalone application on IIS Express. 
+In a first attempt configuration, you can run the application by using mock data, meaning that will generate sample data and store it into in-memory lists and objects, no real database here. You can enable/disable that with the following variable in the web.config settings:
+
+`Web.config
+  <appSettings>
+    <add key="UseMockData" value="true"/>
+  </appSettings>`
+
+You can run and test the apps right away in Visual Studio by just opening the solutions and hitting F5. 
 The data will get populated either from a SQL Server localdb or from objects in-memory if the configuration is set to "UseMockData = True".
 
 Note that when running the app in standalone mode in Windows (like now from Visual Studio) you configure that setting from the web.config file. However, when running the app in a Windows Container (in future steps) you will configure that "UseMockData = True/False" in the environment variables especified at the docker-compose.override.yml or comparable metadata files from Kubernetes or Service Fabric.
 
 ![image](https://user-images.githubusercontent.com/1712635/30354850-1905b882-97e4-11e7-9620-ce0f25e5eb5f.png)
 
+In this configuration, instead of a persistent storage database, the application uses a fake service or fake implementation of data access classes to return data. The way it is implemented is pretty much decoupled thanks to the use of Dependency Injection techniques using Autofac (https://autofac.org/) as an inversion of control (IoC) container. Using Dependency Injection (DI), for this case you can configure the application to use the fake data or the live catalog database. (We will explain more about DI shortly.) The startup code reads a useMockData setting from the web.config files, and configures the Autofac container to inject either the fake data implementation or the live catalog database access implementation. 
+Most of the techniques used in this application should be very familiar to anyone who has used MVC or Web Forms. However, might be unfamiliar for some developers.
+Note that we’re explaining DI approaches so you can explore the application in different ways.
+DI is definitely not a requirement for using Windows Containers or containers in general. They are orthogonal subjects, but both are best practices for modernized applications. Even when it might be obvious for many people, it is important to highlight that you don’t need to change the code of your existing applications and support DI in order to containerized your application. In most cases you shouldn’t need to modify your C# code.
+DI inverts the typical object-oriented strategy of writing classes that allocate all needed resources. Instead, classes request their dependencies from a service container. The advantage of DI is that you can replace implementations of interfaces with multiple implementations, like in this case replacing an external database access with fakes (mocks) to support testing or other environments. 
+The DI container uses the web.config useMockData configuration to control whether to use the fake catalog data or the live data from the running service. The application registers an HttpModule object that builds the container and registers a pre-request handler to inject dependencies. You can see that code in the Modules/ ApplicationModule.cs files, pretty similar for the MVC and the Web Forms apps, which looks like the following example:
+
+`ApplicationModule.cs
+    public class ApplicationModule : Module
+    {
+        private bool useMockData;
+
+        public ApplicationModule(bool useMockData)
+        {
+            this.useMockData = useMockData;
+        }
+        protected override void Load(ContainerBuilder builder)
+        {
+            if (this.useMockData)
+            {
+                builder.RegisterType<CatalogServiceMock>()
+                    .As<ICatalogService>()
+                    .SingleInstance();
+            }
+            else
+            {
+                builder.RegisterType<CatalogService>()
+                    .As<ICatalogService>()
+                    .InstancePerLifetimeScope();
+            }
+
+            builder.RegisterType<CatalogDBContext>()
+                .InstancePerLifetimeScope();
+
+            builder.RegisterType<CatalogDBInitializer>()
+                .InstancePerLifetimeScope();
+
+            builder.RegisterType<CatalogItemHiLoGenerator>()
+                .SingleInstance();
+        }
+    }`
+
+You can see in that code how you can have different implementations injected in the application constructors when instancing an object of the type ICatalogService. When the useMockData is true, it is registering a class named CatalogServiceMock but a class named CatalogService when the flag is false. 
+In the case of the MVC application, the ICatalogService implementation is injected in the Controllers constructors (DI based on constructors), like in this case:
+
+`CatalogController.cs (MVC app)
+    public class CatalogController : Controller
+    {
+        private ICatalogService service;
+
+        public CatalogController(ICatalogService service)
+        {
+            this.service = service;
+        }
+    //... `
+
+In the case of the WebForms application, the ICatalogService implementation is injected in pages properties (DI based on properties), like in this case (it could also use constructors, it is a matter of preference):
 
 
+`Default.aspx.cs (Web Forms app)
+    public partial class _Default : Page
+    {
+        //...
+        public ICatalogService CatalogService { get; set; }
+    //... `
