--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -117,8 +117,11 @@ In the case of the WebForms application, the ICatalogService implementation is i
 
 
 ### Default.aspx.cs (Web Forms app)
-   `public partial class _Default : Page
+
+`
+    public partial class _Default : Page
     {
         //...
         public ICatalogService CatalogService { get; set; }
-    //... `
+    //... 
+`
