Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -104,7 +104,7 @@ In the case of the MVC application, the ICatalogService implementation is inject
 
 ### CatalogController.cs (MVC app)
 
-  ` public class CatalogController : Controller
+`   public class CatalogController : Controller
     {
         private ICatalogService service;
 
@@ -112,18 +112,21 @@ In the case of the MVC application, the ICatalogService implementation is inject
         {
             this.service = service;
         }
-    //... `
+        //... 
+     }`
 
 In the case of the WebForms application, the ICatalogService implementation is injected in pages properties (DI based on properties), like in this case (it could also use constructors, it is a matter of preference):
 
 
 ### Default.aspx.cs (Web Forms app)
 
-  ` public partial class _Default : Page
+`
+    public partial class _Default : Page
     {
         //...
         public ICatalogService CatalogService { get; set; }
         //... 
-    } `
+    }
+`
 
 
