Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -118,15 +118,14 @@ In the case of the MVC application, the ICatalogService implementation is inject
 In the case of the WebForms application, the ICatalogService implementation is injected in pages properties (DI based on properties), like in this case (it could also use constructors, it is a matter of preference):
 
 
-### Default.aspx.cs (Web Forms app)
+### Default.aspx.cs (Web Forms app)  
 
-`
-    public partial class _Default : Page
-    {
-        //...
-        public ICatalogService CatalogService { get; set; }
-        //... 
-    }
-`
+`    public partial class _Default : Page`
+    `{`
+        `//...`
+        `public ICatalogService CatalogService { get; set; }`
+        `//... `
+    `}`
+
 
 
