Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -120,12 +120,12 @@ In the case of the WebForms application, the ICatalogService implementation is i
 
 ### Default.aspx.cs (Web Forms app)  
 
-`    public partial class _Default : Page`
-    `{`
-        `//...`
-        `public ICatalogService CatalogService { get; set; }`
-        `//... `
-    `}`
+    `public partial class _Default : Page
+    {
+        //...
+        public ICatalogService CatalogService { get; set; }
+        //... 
+    }`
 
 
 
