Updated 01. Tour on eShopModernizing apps implementation code (markdown)

--- a/01.-Tour-on-eShopModernizing-apps-implementation-code.md
+++ b/01.-Tour-on-eShopModernizing-apps-implementation-code.md
@@ -4,7 +4,7 @@ In this walkthrough, you can simply explore the initial implementation of two sa
 In a similar way you could be containerizing a classic WCF service (Windows Communication Foundation) that could be consumed by a desktop application, as in this other example (eShopModernizingWCFWinForms).
 
 ##  Goals for this walkthrough
-Just to get familiar with these apps and its code and configuration, as you can configure the app so it generates and uses mock-data without using the SQL Database, if you want, for testing purposes. This optional config is based on Dependency Injection, in a decoupled way.
+Although in order to containerized these apps you don't really need to know how they are internally made, this intro's goal is just to get familiar with these apps' code and configuration, as you can configure the app so it generates and uses mock-data without using the SQL Database, if you want, for testing purposes. This optional config is based on Dependency Injection, in a decoupled way.
 
 ##  Scenario
 The diagram below explains the simple scenario of the original legacy applications.
