Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -161,3 +161,5 @@ For further documentation on Kubernetes and Azure Container Service (ACS) check 
 https://docs.microsoft.com/en-us/azure/container-service/kubernetes/
 
 
+## Deploying from VSTS CD pipeline to Kubernetes in ACS  
+- TBD (Plain)
