Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -1,8 +1,14 @@
 ##  Overview
-In this walkthrough, TBD
+Windows Containers should be used as a way to improve deployments to production, development and test environments of existing .NET applications based on .NET Framework technologies like MVC, Web Forms or WCF.
 
 ##  Goals for this walkthrough
-TBD
+Show you several alternatives on how to containerize an existing .NET Framework application:
+
+1.	Containerized your application through Visual Studio 2017 Tools for Docker (VS 2017 or later).
+2.	Containerized your application by manually adding the dockerfiles and using the Docker CLI.
+3.	Containerized your application through Img2Docker tool (Open Source tool from Docker)
+
+This Walkthrough covers the three approaches although it offers further details for the VS 2017 Tools for Docker approach.
 
 ##  Scenario
 TBD
