Updated 02. How to containerized the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerized-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -11,14 +11,18 @@ Show you several alternatives on how to containerize an existing .NET Framework 
 This Walkthrough covers the three approaches although it offers further details for the VS 2017 Tools for Docker approach.
 
 ##  Scenario
-TBD
+The diagram below shows the scenario for the containerized eShop legacy applications.
+![image](https://user-images.githubusercontent.com/1712635/30395628-9c4bff98-987b-11e7-82ca-89a1648f3bdc.png)
+
+-------------------------------------
+-------------------------------------
 
 ## How to: dockerize the app
 1. Add Docker files to the project:
    * In Visual Studio right click on the project -> Add-> Docker support
    * The docker-compose files are created plus the dcproj.
-2. Add the environment variables to the docker-compose.override by using the [.env file](https://github.com/dotnet-architecture/eShopModernizing/blob/master/eShopModernizedMVCSolution/.env). Containers will use docker-compose environment variables and settings overriding values at the web.config, so the needed settings must be set at the docker-compose diles and .env file. 
-This environment variables must be caught in the application and used instead of the application settings. In our apps this is done in the CatalogConfiguration class.
+2. Add the environment variables to the docker-compose.override by using the [.env file](https://github.com/dotnet-architecture/eShopModernizing/blob/master/eShopModernizedMVCSolution/.env). Containers will use docker-compose environment variables and settings overriding values at the web.config, so the needed settings must be set at the docker-compose files and .env file. 
+This environment variables must be setin the application and used instead of the web.config application settings. In our apps this is done in the CatalogConfiguration class.
 
 ## How to: run application in Windows Server 2016 with Containers
 1. Create the docker image:
